# genlab_bestilling

./: .copier-answers.yml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  aliases-private.example.sh  aliases.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  publish.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  Structure.md  Technical.md
src/: manage.py
src/apps/core/: context_processors.py
src/apps/core/templatetags/: core.py
src/apps/users/: adapters.py  admin.py  managers.py  models.py  urls.py  views.py
src/capps/: README.md
src/capps/contrib/: README.md
src/capps/core/: apps.py  views.py
src/capps/core/templatetags/: core.py
src/capps/users/: adapters.py  admin.py  apps.py  autocomplete.py  exceptions.py  forms.py  managers.py  models.py  tables.py  urls.py  views.py
src/capps/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
src/config/: autocomplete.py  routers.py  storages.py  unfold.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  production.py  test.py
src/fixtures/: bestilling.json  groups.json  isolation_methods.json  locations.json  nina.json  positive_controls.json  sample_types.tsv  species.tsv  test.json  users.json
src/frontend/: apps.py  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/frontend/src/analysis_order/: App.jsx  config.js  index.css  store.js
src/frontend/src/analysis_samples/: App.jsx  config.js  index.css
src/frontend/src/helpers/: PastableArrayInput.jsx  PlatePreview.jsx  components.jsx  libs.js
src/frontend/src/plates/: App.jsx  index.css  main.jsx  store.js
src/frontend/src/samples/: App.jsx  index.css  main.jsx
src/genlab_bestilling/: admin.py  apps.py  autocomplete.py  filters.py  forms.py  managers.py  models.py  tables.py  tasks.py  urls.py  views.py
src/genlab_bestilling/api/: constants.py  serializers.py  views.py
src/genlab_bestilling/libs/: bird_id.py  formset.py  genlabid.py  helpers.py  isolation.py  load_csv_fixture.py
src/genlab_bestilling/migrations/: 0001_generate_genlabid.py  0001_initial.py  0002_alter_genrequest_options_alter_species_options.py  0002_initial.py  0002_order_name_order_tags.py  0003_alter_analysistype_options_alter_area_options_and_more.py  0003_alter_order_notes.py  0003_analysisresult_order_alter_species_markers.py  0003_remove_sample_markers.py  0004_alter_equimentorderquantity_equipment_and_more.py  0004_alter_sample_order.py  0004_remove_sample_date_sample_year.py  0005_alter_genrequest_options_alter_order_genrequest.py  0005_alter_project_species.py  0005_rename_station_id_location_code_location_fylke.py  0006_equipmentbuffer_and_more.py  0006_genrequest_created_at_genrequest_last_modified_at_and_more.py  0006_order_status_alter_order_project_alter_sample_order.py  0007_alter_equimentorderquantity_buffer_quantity.py  0007_alter_order_status.py  0007_analysis_extractionplate_extractplateposition_and_more.py  0008_alter_order_status.py  0008_generate_genlabid.py  0008_remove_analysisorder_customize_markers.py  0008_remove_sample_area_alter_sample_location_and_more.py  0009_alter_sample_markers_alter_sample_pop_id_and_more.py  0009_analysisorder_expected_delivery_date.py  0009_remove_genrequest_expected_total_samples_and_more.py  0010_alter_analysisorder_markers_alter_order_sample_types_and_more.py  0010_alter_species_location_type.py  0010_remove_extractionplate_extracted_at_and_more.py  0011_extractplateposition_notes_and_more.py  0011_project_members_project_owner.py  0011_remove_location_type_location_types.py  0012_alter_location_river_id.py  0012_project_creator.py  0012_sample_unique_genlab_id.py  0013_location_comment_alter_location_river_id.py  0013_remove_analysisorder_expected_total_samples_and_more.py  0013_sample_name.py  (+65 more)
src/genlab_bestilling/staff/: apps.py  filters.py  forms.py  tables.py  urls.py  views.py
src/genlab_bestilling/templates/genlab_bestilling/: analysis_sample_form_frontend.html  analysisorder_detail.html  analysisorder_filter.html  analysisorder_form.html  base_filter.html  equipmentorder_detail.html  equipmentorder_filter.html  equipmentorder_form.html  equipmentorderquantity_form.html  extractionorder_detail.html  extractionorder_filter.html  extractionorder_form.html  generic_form.html  genrequest_confirm_delete.html  genrequest_detail.html  genrequest_filter.html  genrequest_form.html  genrequest_list.html  order_confirm_delete.html  order_filter.html  order_list.html  plates.html  project_detail.html  project_form.html  project_list.html  sample_form.html  sample_form_frontend.html  sample_list.html  samples.html  (+1 more)
src/genlab_bestilling/tests/: conftest.py  test_bird_id.py  test_e2e.py  test_models.py
src/nina/: admin.py  apps.py  autocomplete.py  forms.py  models.py  tables.py  tasks.py  tests.py  urls.py  views.py
src/nina/migrations/: 0001_initial.py  0002_alter_projectmembership_project.py  0003_project_verified_at.py
src/shared/: base_models.py  db.py  forms.py  mixins.py  sentry.py  views.py
src/staff/: api.py  apps.py  filters.py  forms.py  mixins.py  serializers.py  tables.py  urls.py  views.py
src/staff/templatetags/: next_input.py  order_tags.py  table_header_tag.py
src/static/js/: plate_positions.js  samples-grid.js
src/templates/: base.html  components.yaml
src/templates/components/: action-button.html  filtering.html  formset.html  object-detail-staff.html  object-detail.html  order-detail.html  table-cell.html  table.html
src/templates/django_tables2/: header.html  tailwind.html  tailwind_inner.html
src/templates/users/: user_detail.html  user_form.html
src/theme/static_src/: package-lock.json  package.json  tailwind.config.js
(+116 files in other folders)
